@@ -69,3 +69,4 @@ S3method(plot, procr)
 S3method(print, procr)
 S3method(plot, driftvec)
 S3method(print, driftvec)
+S3method(print, imds)
