@@ -17,8 +17,8 @@ gravity(X, lambda = 1)
 binarized data matrix \eqn{Y} we compute \eqn{Y'Y} which leads to the co-occurence matrix.
 We then use the gravity model to compute the gravity dissimilarities. 
 In order to give more (or less) structure to the MDS solution, the tuning parameter (which 
-defines a power transformation) can be increased (or decreased with lower bound 0). In addition, 
-a weight matrix is created that sets cells with no co-occurences to 0, i.e. they are blanked out in a subsequent smacof fit (in the \code{gravdiss} output they are set to \code{NA}). The corresponding weight matrix for blanking out these cells is established automatically in \code{mds()}. 
+defines a power transformation) can be increased (or decreased). In addition, 
+a weight matrix is created that sets cells with no co-occurences to 0. The corresponding weight matrix for blanking out these cells is established automatically in \code{mds()}. 
 }
 
 \value{
